tests/baselines/reference/unusedLocalsAndParameters.errors.txt
tests/cases/compiler/unusedLocalsAndParameters.ts(4,12): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(9,22): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(15,5): error TS6133: 'farrow' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(15,15): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(18,7): error TS6133: 'C' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(20,12): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(23,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/unusedLocalsAndParameters.ts(23,11): error TS6133: 'v' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(27,5): error TS6133: 'E' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(29,12): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(32,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/unusedLocalsAndParameters.ts(32,11): error TS6133: 'v' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(38,12): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(41,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/unusedLocalsAndParameters.ts(41,11): error TS6133: 'v' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(48,10): error TS6133: 'i' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(52,10): error TS6133: 'i' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(56,17): error TS6133: 'n' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(63,11): error TS6133: 'c' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(68,11): error TS6133: 'a' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(71,11): error TS6133: 'c' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(74,11): error TS6133: 'c' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(79,11): error TS6133: 'N' is declared but never used.
tests/cases/compiler/unusedLocalsAndParameters.ts(80,9): error TS6133: 'x' is declared but never used.


==== tests/cases/compiler/unusedLocalsAndParameters.ts (24 errors) ====
    export { };
    
    // function declaration paramter
    function f(a) {
               ~
!!! error TS6133: 'a' is declared but never used.
    }
    f(0);
    
    // function expression paramter
    var fexp = function (a) {
                         ~
!!! error TS6133: 'a' is declared but never used.
    };
    
    fexp(0);
    
    // arrow function paramter
    var farrow = (a) => {
        ~~~~~~
!!! error TS6133: 'farrow' is declared but never used.
                  ~
!!! error TS6133: 'a' is declared but never used.
    };
    
    class C {
          ~
!!! error TS6133: 'C' is declared but never used.
        // Method declaration paramter
        method(a) {
               ~
!!! error TS6133: 'a' is declared but never used.
        }
        // Accessor declaration paramter
        set x(v: number) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
              ~
!!! error TS6133: 'v' is declared but never used.
        }
    }
    
    var E = class {
        ~
!!! error TS6133: 'E' is declared but never used.
        // Method declaration paramter
        method(a) {
               ~
!!! error TS6133: 'a' is declared but never used.
        }
        // Accessor declaration paramter
        set x(v: number) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
              ~
!!! error TS6133: 'v' is declared but never used.
        }
    }
    
    var o = {
        // Object literal method declaration paramter
        method(a) {
               ~
!!! error TS6133: 'a' is declared but never used.
        },
        // Accessor declaration paramter
        set x(v: number) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
              ~
!!! error TS6133: 'v' is declared but never used.
        }
    };
    
    o;
    
    // in a for..in statment
    for (let i in o) {
             ~
!!! error TS6133: 'i' is declared but never used.
    }
    
    // in a for..of statment
    for (let i of [1, 2, 3]) {
             ~
!!! error TS6133: 'i' is declared but never used.
    }
    
    // in a for. statment
    for (let i = 0, n; i < 10; i++) {
                    ~
!!! error TS6133: 'n' is declared but never used.
    }
    
    // in a block
    
    const condition = false;
    if (condition) {
        const c = 0;
              ~
!!! error TS6133: 'c' is declared but never used.
    }
    
    // in try/catch/finally
    try {
        const a = 0;
              ~
!!! error TS6133: 'a' is declared but never used.
    }
    catch (e) {
        const c = 1;
              ~
!!! error TS6133: 'c' is declared but never used.
    }
    finally {
        const c = 0;
              ~
!!! error TS6133: 'c' is declared but never used.
    }
    
    
    // in a namespace
    namespace N {
              ~
!!! error TS6133: 'N' is declared but never used.
        var x;
            ~
!!! error TS6133: 'x' is declared but never used.
    }
    
        